--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -145,3 +145,106 @@ footer p {
   color: white;
   text-align: left;
 }
+
+/* Media Queries */
+
+/* Tablet-Portrait Orientation */
+@media only screen and (max-width: 1024px) {
+
+/* Nav to Menu Button */
+
+  nav li {
+    display: none;
+  }
+
+  .menu-button {
+    display: block;
+    padding: 0.75rem 0;
+    text-align: center;
+    color: white;
+    text-decoration: none;
+  }
+
+/* Increase size of products + hide third */
+
+  figure {
+    width: 47%;
+  }
+
+  #glasses {
+    display: none;
+  }
+
+}
+
+/* Mobile Phone */
+@media only screen and (max-width: 470px) {
+
+.container {
+  width: 100%;
+}
+
+/* Logo Centered */
+
+header .container {
+  display: block;
+}
+
+  header img  {
+    height: 1.5rem;
+    width: auto;
+    padding: 0.66rem 45%;
+ }
+
+  header span {
+    display: none;
+  }
+
+/* Adjust banner size + content */
+
+  .banner {
+    height: 15rem;
+    width: 100%;
+  }
+
+  .content {
+    width: 100%;
+    height: 3rem;
+    padding: 1rem 1rem;
+    margin-top: 10rem;
+  }
+
+  h2 {
+    font-size: .65rem;
+  }
+
+  h3 {
+    font-size: 1rem;
+  }
+
+  /* Products reduced to single view */
+
+  figure {
+    display: block;
+    width: 80%;
+    margin: 0.1rem 10%;
+  }
+
+  #watch {
+    display: none;
+  }
+
+/* Info detail stacked */
+
+.info-detail {
+  width: 80%;
+  margin: 1rem 10% 1rem 10%;
+}
+
+.info-detail h5 {
+  padding: 1rem 2rem;
+  background-color: black;
+  color: white;
+}
+
+}
